# pypgcdc

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  schema.sql
pypgcdc/: __init__.py  __main__.py  decoders.py  models.py  reader.py  stores.py  utils.py
src/pypgcdc/: __init__.py  __main__.py  decoders.py  models.py  reader.py  stores.py
tests/: docker-compose.yaml  test_decoders.py  test_reader.py  test_utils.py
